--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,1 +1,89 @@
-<p>login works!</p>
+<section>
+  <div class="container">
+    <div class="row justify-content-center my-5">
+      <div class="col-md-6" style="margin-top: 50px;">
+        <div class="card">
+          <div class="card-body">
+            <div class="text-center">
+              <h2><i style="margin-right: 5px; font-size: 30px; margin-top: 20px" class="material-icons">recycling</i>.msgRecyclingRewards</h2>
+              <h5 class="card-title mt-4 mb-5">Account Login</h5>
+            </div>
+            <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
+              <p>State error here</p>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form >
+              <div class="form-outline mb-4">
+                <label class="form-label" >Email Address</label>
+                <input type="email" name="email" class="form-control" required>
+              </div>
+              <div class="form-outline mb-4">
+                <label class="form-label">Password</label>
+                <input type="password" name="password" class="form-control" required>
+              </div>
+              <div class="d-flex justify-content-center mb-4">
+                <button type="submit" class="btn btn-primary">
+                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
+                  <span>Loading...</span>
+                  <span>Log in</span>
+                </button>
+              </div>
+            </form>
+            <div class="row mb-4">
+              <div class="col d-flex justify-content-center">
+                <a routerLink="/register">Become a .msgRecycler</a>
+              </div>
+              <div class="col">
+                <a routerLink="/reset-password">Forgot your password?</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--  &lt;!&ndash; Success screen &ndash;&gt;-->
+  <!--  <div class="container">-->
+  <!--    &lt;!&ndash; <div class="container"> &ndash;&gt;-->
+  <!--    <div class="row justify-content-center my-5">-->
+  <!--      <div class="col-md-6" style="margin-top: 50px;">-->
+  <!--        <div class="card">-->
+  <!--          <div class="card-body">-->
+  <!--            <div class="text-center">-->
+  <!--              <h2><i style="margin-right: 5px;" class="bi bi-safe"></i>Snap Invoice</h2>-->
+  <!--              <h5 class="card-title mt-4 mb-4">Verification Code Sent To ...</h5>-->
+  <!--              <i class="bi bi-check-circle-fill" style="font-size: 30px;color: green;"></i>-->
+  <!--              <p class="mt-2" style="font-size: 20px;">Please access your SMS and enter the code.</p>-->
+  <!--            </div>-->
+  <!--            <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">-->
+  <!--              <p> State error</p>-->
+  <!--              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>-->
+  <!--            </div>-->
+  <!--            <form>-->
+  <!--              <div class="form-outline mb-4">-->
+  <!--                <label class="form-label">Verirfication Code</label>-->
+  <!--                <input type="text" name="code" class="form-control" required>-->
+  <!--              </div>-->
+  <!--              <div class="d-flex justify-content-center mb-4">-->
+  <!--                <button type="submit" class="btn btn-primary">-->
+  <!--                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>-->
+  <!--                  <span>Loading...</span>-->
+  <!--                  <span>Verify Code</span>-->
+  <!--                </button>-->
+  <!--              </div>-->
+  <!--            </form>-->
+  <!--            <div class="row mb-4">-->
+  <!--              <div class="col d-flex justify-content-center">-->
+  <!--                <a style="color: #0D6EFD; text-decoration: underline; cursor: pointer;">Account Login</a>-->
+  <!--              </div>-->
+  <!--              <div class="col">-->
+  <!--                <a [routerLink]="['/register']" style="color: #0D6EFD; text-decoration: underline; cursor: pointer;">Create an account</a>-->
+  <!--              </div>-->
+  <!--            </div>-->
+  <!--          </div>-->
+  <!--        </div>-->
+  <!--      </div>-->
+  <!--    </div>-->
+  <!--  </div>-->
+</section>
