--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,39 +1,42 @@
-<section>
-  <div class="container">
-    <div class="row justify-content-center align-items-center my-5">
-      <div class="col-md-8 col-lg-6">
-        <div class="card shadow-lg p-4" style="max-width: 550px; width: 100%;">
-          <div class="card-body">
-            <div class="text-center">
-              <h2><i style="font-size: 30px; margin-top: 20px" class="material-icons">recycling</i>.msgRecyclingRewards</h2>
-              <h5 class="card-title mt-4 mb-5">Account Login</h5>
-            </div>
-            <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
-              <p> Error message will be diplayed here. </p>
-              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-            <form>
-              <div class="mb-4">
-                <label class="form-label">Email Address</label>
-                <input type="email" name="email" class="form-control" required>
+<section *ngIf="(loginState$ | async) as state" [ngSwitch]="state.dataState">
+  <div *ngIf="!state.loginSuccess && !state.isUsingMfa" class="section">
+    <div class="container">
+      <div class="row justify-content-center align-items-center my-5">
+        <div class="col-md-8 col-lg-6">
+          <div class="card shadow-lg p-4">
+            <div class="card-body">
+              <div class="text-center">
+                <h2><i class="material-icons">recycling</i>.msgRecyclingRewards</h2>
+                <h5 class="card-title mt-4 mb-5">Account Login</h5>
               </div>
-              <div class="mb-4">
-                <label class="form-label">Password</label>
-                <input type="password" name="password" class="form-control" required>
+              <div *ngIf="state.dataState === DataState.ERROR" class="alert alert-danger position-relative" role="alert">
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                <p>{{ state.error }}</p>
               </div>
-              <div class="d-grid gap-2 mb-4">
-                <button type="submit" class="btn btn-purple">
-                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                  <span class="ms-2">Log in</span>
-                </button>
-              </div>
-            </form>
-            <div class="row mb-4">
-              <div class="col d-flex justify-content-center">
-                <a routerLink="/register" class="link">Become a .msgRecycler</a>
-              </div>
-              <div class="col">
-                <a routerLink="/reset-password" class="link">Forgot your password?</a>
+              <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+                <div class="mb-4">
+                  <label class="form-label">Email Address</label>
+                  <input [disabled]="state.dataState === DataState.LOADING" ngModel type="email" name="email" class="form-control" required>
+                </div>
+                <div class="mb-4">
+                  <label class="form-label">Password</label>
+                  <input [disabled]="state.dataState === DataState.LOADING" ngModel type="password" name="password" class="form-control" required>
+                </div>
+                <div class="d-grid gap-2 mb-4">
+                  <button [disabled]="state.dataState === DataState.LOADING || loginForm.invalid || loginForm.pristine" type="submit" class="btn btn-msg-color">
+                    <span *ngIf="state.dataState === DataState.LOADING" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <span *ngIf="state.dataState === DataState.LOADING"> Loading.. </span>
+                    <span *ngIf="state.dataState !== DataState.LOADING"> Log in </span>
+                  </button>
+                </div>
+              </form>
+              <div class="row mb-4">
+                <div class="col d-flex justify-content-center">
+                  <a [ngStyle]="{'pointer-events': state.dataState === DataState.LOADING ? 'none' : ''}" routerLink="/register" class="link">Become a .msgRecycler</a>
+                </div>
+                <div class="col">
+                  <a [ngStyle]="{'pointer-events': state.dataState === DataState.LOADING ? 'none' : ''}" routerLink="/reset-password" class="link">Forgot your password?</a>
+                </div>
               </div>
             </div>
           </div>
@@ -42,47 +45,48 @@
     </div>
   </div>
 
-<!--  &lt;!&ndash; Success screen &ndash;&gt;-->
-  <!--  <div class="container">-->
-  <!--    &lt;!&ndash; <div class="container"> &ndash;&gt;-->
-  <!--    <div class="row justify-content-center my-5">-->
-  <!--      <div class="col-md-6" style="margin-top: 50px;">-->
-  <!--        <div class="card">-->
-  <!--          <div class="card-body">-->
-  <!--            <div class="text-center">-->
-  <!--              <h2><i style="margin-right: 5px;" class="bi bi-safe"></i>Snap Invoice</h2>-->
-  <!--              <h5 class="card-title mt-4 mb-4">Verification Code Sent To ...</h5>-->
-  <!--              <i class="bi bi-check-circle-fill" style="font-size: 30px;color: green;"></i>-->
-  <!--              <p class="mt-2" style="font-size: 20px;">Please access your SMS and enter the code.</p>-->
-  <!--            </div>-->
-  <!--            <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">-->
-  <!--              <p> State error</p>-->
-  <!--              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>-->
-  <!--            </div>-->
-  <!--            <form>-->
-  <!--              <div class="form-outline mb-4">-->
-  <!--                <label class="form-label">Verirfication Code</label>-->
-  <!--                <input type="text" name="code" class="form-control" required>-->
-  <!--              </div>-->
-  <!--              <div class="d-flex justify-content-center mb-4">-->
-  <!--                <button type="submit" class="btn btn-primary">-->
-  <!--                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>-->
-  <!--                  <span>Loading...</span>-->
-  <!--                  <span>Verify Code</span>-->
-  <!--                </button>-->
-  <!--              </div>-->
-  <!--            </form>-->
-  <!--            <div class="row mb-4">-->
-  <!--              <div class="col d-flex justify-content-center">-->
-  <!--                <a style="color: #0D6EFD; text-decoration: underline; cursor: pointer;">Account Login</a>-->
-  <!--              </div>-->
-  <!--              <div class="col">-->
-  <!--                <a [routerLink]="['/register']" style="color: #0D6EFD; text-decoration: underline; cursor: pointer;">Create an account</a>-->
-  <!--              </div>-->
-  <!--            </div>-->
-  <!--          </div>-->
-  <!--        </div>-->
-  <!--      </div>-->
-  <!--    </div>-->
-  <!--  </div>-->
+  <!-- Success screen when MFA is enabled -->
+  <div *ngIf="state.isUsingMfa" class="section">
+    <div class="container">
+      <div class="row justify-content-center my-5">
+        <div class="col-md-8 col-lg-6">
+          <div class="card shadow-lg p-4">
+            <div class="card-body">
+              <div class="text-center">
+                <h2><i class="material-icons">recycling</i>.msgRecyclingRewards</h2>
+                <h5 class="card-title mt-4 mb-4">Verification Code Sent To ...</h5>
+                <i class="bi bi-check-circle-fill" style="font-size: 80px;color: green;"></i>
+                <p class="mt-2" style="font-size: 20px;">Please access your SMS and enter the code.</p>
+              </div>
+              <div *ngIf="state.dataState === DataState.ERROR" class="alert alert-danger" role="alert">
+                <p>{{ state.error }}</p>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              <form #verifyCodeForm="ngForm" (ngSubmit)="verifyLoginCode(verifyCodeForm)">
+                <div class="form-outline mb-4">
+                  <label class="form-label">Verification Code</label>
+                  <input [disabled]="state.dataState === DataState.LOADING" ngModel type="text" name="code" class="form-control" required>
+                </div>
+                <div class="d-flex justify-content-center mb-4">
+                  <button [disabled]="state.dataState === DataState.LOADING || verifyCodeForm.invalid || verifyCodeForm.pristine" type="submit" class="btn btn-msg-color">
+                    <span *ngIf="state.dataState === DataState.LOADING" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <span *ngIf="state.dataState === DataState.LOADING">Loading...</span>
+                    <span *ngIf="state.dataState !== DataState.LOADING">Verify Code</span>
+                  </button>
+                </div>
+              </form>
+              <div class="row mb-4">
+                <div class="col d-flex justify-content-center">
+                  <a (click)="loginPage()" class="link">Account Login</a>
+                </div>
+                <div class="col">
+                  <a [routerLink]="['/register']" class="link">Create an account</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
