--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -1,1 +1,279 @@
-<p>profile works!</p>
+<ng-container>
+  <ng-container>
+    <app-navbar></app-navbar>
+    <!-- <div>{{ state | json }} </div> -->
+    <section>
+      <div class="container">
+        <nav aria-label="breadcrumb" style="margin-top: 8px;">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+              <a [routerLink]="['/']">Home</a>
+            </li>
+            <li class="breadcrumb-item active"> Users </li>
+            <li class="breadcrumb-item active" aria-current="page"></li>
+          </ol>
+        </nav>
+        <div class="bg-white shadow rounded-lg d-block d-sm-flex" style="border-radius: 8px;">
+          <div class="profile-tab-nav border-right">
+            <div class="p-4">
+              <div class="img-circle text-center mb-3" >
+                         <span style="position: relative">
+<!--                            <img src="" alt="John" class="shadow" />-->
+                            <img src="https://img.freepik.com/free-icon/user_318-159711.jpg" alt="John" class="shadow" />
+                         <i (click)="fileInput.click()" class="bi bi-camera-fill right-position"></i>
+                         </span>
+              </div>
+              <h4 class="text-center"></h4>
+              <span class="">Since </span>
+            </div>
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+              <a class="nav-link active" id="profile" data-bs-toggle="pill" data-bs-target="#profile-tab" aria-selected="true" aria-controls="profile" role="tab">
+                <i class="bi bi-person-circle" style="margin-right: 12px;"></i> Profile
+              </a>
+              <a class="nav-link" id="password" data-bs-toggle="pill" data-bs-target="#password-tab" aria-selected="true" aria-controls="password" role="tab">
+                <i class="bi bi-key-fill" style="margin-right: 12px;"></i> Password
+              </a>
+              <a class="nav-link" id="security" data-bs-toggle="pill" data-bs-target="#security-tab" aria-selected="true" aria-controls="security" role="tab">
+                <i class="bi bi-shield-shaded" style="margin-right: 12px;"></i> Authorization
+              </a>
+              <a class="nav-link" id="application" data-bs-toggle="pill" data-bs-target="#application-tab" aria-selected="true" aria-controls="application" role="tab">
+                <i class="bi bi-gear" style="margin-right: 12px;"></i> Account
+              </a>
+              <a class="nav-link" id="notification" data-bs-toggle="pill" data-bs-target="#notification-tab" aria-selected="true" aria-controls="notification" role="tab">
+                <i class="bi bi-lock-fill" style="margin-right: 12px;"></i> Authentication
+              </a>
+            </div>
+          </div>
+          <div class="tab-content p-4 p-md-5" id="v-pills-tabContent" style="border-left: 1px solid #d4d0d0;">
+            <div class="tab-pane fade show active" id="profile-tab" role="tabpanel" aria-labelledby="profile" style="min-height: 510px;">
+              <h3 class="mb-4">Profile Settings</h3>
+              <form #profileForm="ngForm">
+                <input type="hidden" name="id">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>First Name</label>
+                      <input type="text" name="firstName" class="form-control">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>Last Name</label>
+                      <input type="text" name="lastName" class="form-control">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>Email</label>
+                      <input type="text" name="email" class="form-control">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>Phone</label>
+                      <input type="text" name="phone" class="form-control">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>Address</label>
+                      <input type="text" name="address" class="form-control">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>Job Title</label>
+                      <input type="text" name="title" class="form-control">
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <label>Bio</label>
+                      <textarea name="bio" class="form-control" rows="4"></textarea>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <button type="submit" class="btn btn-primary">
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
+                    <span>Loading...</span>
+                    <span>Update</span>
+                  </button>
+                </div>
+              </form>
+            </div>
+            <div class="tab-pane fade" id="password-tab" role="tabpanel" aria-labelledby="password" style="min-height: 510px;">
+              <h3 class="mb-4">Password Settings</h3>
+              <form #passwordForm="ngForm">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>Current password</label>
+                      <input type="password" name="currentPassword" ngModel class="form-control" required>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>New password</label>
+                      <input type="password" name="newPassword" ngModel class="form-control" minlength="5" required>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>Confirm new password</label>
+                      <input type="password" name="confirmNewPassword" ngModel class="form-control" minlength="5" required>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <button type="submit" class="btn btn-primary">
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
+                    <span>Loading...</span>
+                    <span>Update</span>
+                  </button>
+                </div>
+              </form>
+            </div>
+            <div class="tab-pane fade" id="security-tab" role="tabpanel" aria-labelledby="security" style="min-height: 510px;">
+              <h3 class="mb-4">Authorization Settings</h3>
+              <form #roleForm="ngForm">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label style="margin-bottom: 5px;">Role Name</label>
+                      <select name="roleName" class="form-control select-cl" required>
+                        <option class="select-cl"></option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label style="margin-bottom: 5px;">Role Permissions</label>
+                      <input type="text" class="form-control" style="margin-bottom: 5px;">
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <button type="submit" class="btn btn-primary">
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
+                    <span >Loading...</span>
+                    <span >Update</span>
+                  </button>
+                </div>
+              </form>
+            </div>
+            <div class="tab-pane fade" id="application-tab" role="tabpanel" aria-labelledby="application" style="min-height: 510px;">
+              <h3 class="mb-4">Account Settings</h3>
+              <form #settingsForm="ngForm">
+                <input type="hidden" name="userId">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <div class="form-check">
+                        <input type="checkbox" name="enabled" class="form-check-input">
+                        <label class="form-check-label">
+                          Account Active
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input type="checkbox" name="notLocked" class="form-check-input">
+                        <label class="form-check-label">
+                          Account Unlocked
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <button type="submit" class="btn btn-primary">
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
+                    <span>Loading...</span>
+                    <span>Update</span>
+                  </button>
+                </div>
+              </form>
+            </div>
+            <div class="tab-pane fade" id="notification-tab" role="tabpanel" aria-labelledby="notification" style="min-height: 510px;">
+              <h3 class="mb-4">Authentication Settings</h3>
+              <p>These settings help keep your account more secure.</p>
+              <div class="list-group mb-5 shadow">
+                <div class="list-group-item">
+                  <div class="row align-items-center">
+                    <div class="col">
+                      <strong class="mb-2">Multi-Factor Authentication</strong>
+                      <span class="badge bg-success mx-3">Enabled</span>
+                      <span class="badge bg-warning mx-3">Disabled</span>
+                      <p class="text-muted mb-0">Set up Multi-factor Authentication (MFA) help keep your account more secure</p>
+                    </div>
+                    <div class="col-auto">
+                      <button class="btn btn-primary btn-sm">
+                        Enabled
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="list-group-item">
+                  <div class="row align-items-center">
+                    <div class="col">
+                      <strong class="mb-2">Activity Logs</strong>
+                      <p class="text-muted mb-0">Show the latst activites on your account</p>
+                    </div>
+                    <div class="col-auto">
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="activityLog">
+                        <span class="custom-control-label"></span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-12 mt-4">
+            <div class="card" style="border-radius: 8px;">
+              <div class="card-body">
+                <h5 class="card-title">Account Activity Log</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Latest activities on your account.                        </h6>
+                <table class="table table-hover">
+                  <thead>
+                  <tr>
+                    <th scope="col">Device</th>
+                    <th scope="col">IP Address</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Action</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td>device</td>
+                    <td>ip address</td>
+                    <td>created at</td>
+                    <td><span class="badge pill"></span></td>
+                    <td>decription</td>
+                    <td>
+                      <button type="button" class="btn btn-sm" style="background-color: #fd5d0d; font-weight: 450;">Report</button>
+                    </td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </ng-container>
+</ng-container>
+
+<!-- profile image change form -->
+<form enctype="multipart/form-data" style="display:none;">
+  <input type="file" #fileInput name="image" id="image"
+         placeholder="file" ngModel accept="image/*" />
+</form>
