--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -1,4 +1,4 @@
-<ng-container>
+<ng-container *ngIf="(profileState$ | async) as state">
   <ng-container>
     <app-navbar></app-navbar>
     <section>
@@ -8,8 +8,8 @@
             <li class="breadcrumb-item">
               <a [routerLink]="['/']">Home</a>
             </li>
-            <li class="breadcrumb-item active"> Users </li>
-            <li class="breadcrumb-item active" aria-current="page"></li>
+            <li class="breadcrumb-item active"> Recyclers </li>
+            <li class="breadcrumb-item active" aria-current="page"> {{ state?.appData?.data?.user?.firstName }} {{ state?.appData?.data?.user?.lastName }} </li>
           </ol>
         </nav>
         <div class="profile-container bg-white rounded-lg d-block d-sm-flex">
@@ -17,12 +17,12 @@
             <div class="p-4">
               <div class="profile-image text-center mb-3">
                 <span style="position: relative">
-                  <img src="https://img.freepik.com/free-icon/user_318-159711.jpg" alt="John" class="profile-img" />
+                  <img [src]="state?.appData?.data?.user?.imageUrl" alt="https://img.freepik.com/free-icon/user_318-159711.jpg" class="profile-img" />
                   <i (click)="fileInput.click()" class="bi bi-camera-fill right-position"></i>
                 </span>
               </div>
-              <h4 class="text-center">John Doe</h4>
-              <span class="text-muted">Member since 2020</span>
+              <h4 class="text-center">{{ state?.appData?.data?.user?.firstName }} {{ state?.appData?.data?.user?.lastName }}</h4>
+              <span class="text-muted">Member since {{ state?.appData?.data?.user?.createdAt | date: 'MMMM d, y' }}</span>
             </div>
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
               <a class="nav-link active" id="profile" data-bs-toggle="pill" data-bs-target="#profile-tab" aria-selected="true" aria-controls="profile" role="tab">
@@ -49,57 +49,57 @@
           <div class="tab-content p-4 p-md-5" id="v-pills-tabContent" style="border-left: 1px solid #d4d0d0;">
             <div class="tab-pane fade show active" id="profile-tab" role="tabpanel" aria-labelledby="profile" style="min-height: 510px;">
               <h3 class="mb-4">Profile Settings</h3>
-              <form #profileForm="ngForm">
-                <input type="hidden" name="id">
+              <form #profileForm="ngForm" (ngSubmit)="updateProfile(profileForm)">
+                <input type="hidden" name="id" [ngModel]="state?.appData?.data?.user?.id">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
                       <label>First Name</label>
-                      <input type="text" name="firstName" class="form-control">
+                      <input [ngModel]="state?.appData?.data?.user?.firstName" [disabled]="state?.appData?.data?.user?.roleName === 'ROLE_USER' || (isLoading$ | async)" type="text" name="firstName" class="form-control">
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label>Last Name</label>
-                      <input type="text" name="lastName" class="form-control">
+                      <input [ngModel]="state?.appData?.data?.user?.lastName" [disabled]="state?.appData?.data?.user?.roleName === 'ROLE_USER' || (isLoading$ | async)" type="text" name="lastName" class="form-control">
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label>Email</label>
-                      <input type="text" name="email" class="form-control">
+                      <input [ngModel]="state?.appData?.data?.user?.email" [disabled]="state?.appData?.data?.user?.roleName === 'ROLE_USER' || (isLoading$ | async)" type="text" name="email" class="form-control">
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label>Phone</label>
-                      <input type="text" name="phone" class="form-control">
+                      <input [ngModel]="state?.appData?.data?.user?.phone" [disabled]="state?.appData?.data?.user?.roleName === 'ROLE_USER' || (isLoading$ | async)" type="text" name="phone" class="form-control">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>City</label>
+                      <input [ngModel]="state?.appData?.data?.user?.city" [disabled]="state?.appData?.data?.user?.roleName === 'ROLE_USER' || (isLoading$ | async)" type="text" name="city" class="form-control">
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label>Address</label>
-                      <input type="text" name="address" class="form-control">
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label>Job Title</label>
-                      <input type="text" name="title" class="form-control">
+                      <input [ngModel]="state?.appData?.data?.user?.address" [disabled]="state?.appData?.data?.user?.roleName === 'ROLE_USER' || (isLoading$ | async)" type="text" name="address" class="form-control">
                     </div>
                   </div>
                   <div class="col-md-12">
                     <div class="form-group">
                       <label>Bio</label>
-                      <textarea name="bio" class="form-control" rows="4"></textarea>
+                      <textarea [ngModel]="state?.appData?.data?.user?.bio" [disabled]="state?.appData?.data?.user?.roleName === 'ROLE_USER' || (isLoading$ | async)" name="bio" class="form-control" rows="4"></textarea>
                     </div>
                   </div>
                 </div>
                 <div>
-                  <button type="submit" class="btn btn-primary">
-                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
-                    <span>Loading...</span>
-                    <span>Update</span>
+                  <button [disabled]="state?.appData?.data?.user?.roleName === 'ROLE_USER' || (isLoading$ | async)" type="submit" class="btn btn-primary">
+                    <span *ngIf="isLoading$ | async" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
+                    <span *ngIf="isLoading$ | async"> Loading...</span>
+                    <span *ngIf="!(isLoading$ | async)">Update</span>
                   </button>
                 </div>
               </form>
